--- a/random.html
+++ b/random.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/cristiano-ronaldo-cr7-logo-28A3745176-seeklogo.com.png">
     <title>Noobie Portfolio</title>
 </head>
@@ -17,13 +17,8 @@
         </a>
     </header>
     <nav>
-        <a href="About me.html">Abdout me</a>
-        <a href="#">Contact</a>
-        <a href="#">Random</a>
+        <a href="pages/about.html">Abdout me</a>
+        <a href="contact.html">Contact</a>
+        <a href="random.html">Random</a>
     </nav>
-    <div class="pics">
-        <img src="images/IMG_8857.jpg" alt="me">
-        <img src="images/Real Madrid.jpeg" alt="Real madrid players">
-        <img src="images/2015_ford_mustang_gt_1581539153fabbf2e1b2762015-Mustang-50th-Roush-2.webp" alt=" mustang">
-    </div>
 </body>
