made changes with html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
     <nav>
         <a href="About me.html">Abdout me</a>
-        <a href="#">Contact</a>
-        <a href="#">Random</a>
+        <a href="contact.html">Contact</a>
+        <a href="random.html">Random</a>
     </nav>
     <div class="pics">
         <img src="images/IMG_8857.jpg" alt="me">
