--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="icon" type="image/x-icon" href="images/cristiano-ronaldo-cr7-logo-28A3745176-seeklogo.com.png">
     <title>Noobie Portfolio</title>
 </head>
@@ -21,26 +21,4 @@
         <a href="#">Contact</a>
         <a href="#">Random</a>
     </nav>
-
-    <a href="#" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-google"></a>
-    <a href="#" class="fa fa-linkedin"></a>
-    <a href="#" class="fa fa-youtube"></a>
-    <a href="#" class="fa fa-instagram"></a>
-    <a href="#" class="fa fa-pinterest"></a>
-    <a href="#" class="fa fa-snapchat-ghost"></a>
-    <a href="#" class="fa fa-skype"></a>
-    <a href="#" class="fa fa-android"></a>
-    <a href="#" class="fa fa-dribbble"></a>
-    <a href="#" class="fa fa-vimeo"></a>
-    <a href="#" class="fa fa-tumblr"></a>
-    <a href="#" class="fa fa-vine"></a>
-    <a href="#" class="fa fa-foursquare"></a>
-    <a href="#" class="fa fa-stumbleupon"></a>
-    <a href="#" class="fa fa-flickr"></a>
-    <a href="#" class="fa fa-yahoo"></a>
-    <a href="#" class="fa fa-reddit"></a>
-    <a href="#" class="fa fa-rss"></a>
-
 </body>
