--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </a>
     </header>
     <nav>
-        <a href="about me.html">Abdout me</a>
+        <a href="me.html">Abdout me</a>
         <a href="contact.html">Contact</a>
         <a href="random.html">Random</a>
     </nav>
