made my about me page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         <a href="contact.html">Contact</a>
         <a href="random.html">Random</a>
     </nav>
-    <div class="pics">
-        <img src="images/IMG_8857.jpg" alt="me">
-        <img src="images/Real Madrid.jpeg" alt="Real madrid players">
-        <img src="images/2015_ford_mustang_gt_1581539153fabbf2e1b2762015-Mustang-50th-Roush-2.webp" alt=" mustang">
+    <div class="Me">
+        <h1>Welcome to my page!</h1>
     </div>
 </body>
