--- a/me.html
+++ b/me.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/me.css">
     <link rel="icon" type="image/x-icon" href="images/cristiano-ronaldo-cr7-logo-28A3745176-seeklogo.com.png">
     <title>Noobie Portfolio</title>
 </head>
@@ -17,7 +17,15 @@
         </a>
     </header>
     <nav>
+        <a href="me.html">Abdout me</a>
         <a href="contact.html">Contact</a>
         <a href="random.html">Random</a>
     </nav>
+
+    <section class="aboutme">
+        <img src="images/Me.jpeg" alt="">
+        <p>Hello! My name is Abdulazeez Al Adhami, I currently work at a hotel as a maintenance supervisor and i study
+            code couple times a week for a better career. </p>
+
+    </section>
 </body>
