--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         </a>
     </header>
     <nav>
-        <a href="About me.html">Abdout me</a>
+        <a href="me.html">Abdout me</a>
         <a href="#">Contact</a>
         <a href="#">Random</a>
     </nav>
