added contact info

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="icon" type="image/x-icon" href="images/cristiano-ronaldo-cr7-logo-28A3745176-seeklogo.com.png">
     <title>Noobie Portfolio</title>
@@ -18,7 +19,12 @@
     </header>
     <nav>
         <a href="me.html">Abdout me</a>
-        <a href="#">Contact</a>
-        <a href="#">Random</a>
+        <a href="contact.html">Contact</a>
+        <a href="random.html">Random</a>
     </nav>
+    <div class="fa">
+        <a href="https://www.facebook.com/Abdul.12468/" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://www.instagram.com/abdul.1246/" target="_blank" class="fa fa-instagram"></a>
+        <a href="mailto:abdulaze19@gmail.com" class="fa fa-envelope"></a>
+    </div>
 </body>
