--- a/me.html
+++ b/me.html
@@ -25,7 +25,7 @@
     <section class="aboutme">
         <img src="images/Me.jpeg" alt="">
         <p>Hello! My name is Abdulazeez Al Adhami, I currently work at a hotel as a maintenance supervisor and i study
-            code couple times a week for a better career. </p>
+            code to develop myself and start a new better career. </p>
 
     </section>
 </body>
