--- a/random.html
+++ b/random.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/random.css">
     <link rel="icon" type="image/x-icon" href="images/cristiano-ronaldo-cr7-logo-28A3745176-seeklogo.com.png">
     <title>Noobie Portfolio</title>
 </head>
