made changes in av bar

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         </a>
     </header>
     <nav>
-        <a href="me.html">Abdout me</a>
+        <a href="me.html">About me</a>
         <a href="contact.html">Contact</a>
         <a href="random.html">Random</a>
     </nav>
